--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 /* Our default values set as CSS variables */
 :root {
+  --background-image: url("starry.jpg");
   --color-bg: #000000;
   --color-text-main: #000000;
   --color-primary: #FFFF00;
