--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 /* Our default values set as CSS variables */
 :root {
-  --background-image: url("starry.jpg");
+  background-image: url("starry.jpg");
   --color-bg: #000000;
   --color-text-main: #000000;
   --color-primary: #FFFF00;
@@ -101,6 +101,7 @@ END Glitch hello-app default styles
 
 body {
   font-family: HK Grotesk;
+  background-image: url("starry.jpg");
   background-color: var(--color-bg);
 }
 
