📕🤖 Checkpoint ./style.css:41223576/8 ./index.html:41223576/52

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
 
 /* Very light scaling for our illustration */
 .title {
-  color: #2800FF;
+  color: #FFFFFF;
   font-family: HK Grotesk;
   font-style: normal;
   font-weight: bold;
