🕴🌉 Checkpoint ./style.css:41223576/40 ./index.html:41223576/140

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 /* Our default values set as CSS variables */
 :root {
   background-image: url("starry.jpg");
-  --color-bg: #000000;
+  --color-bg: #FFFFFF;
   --color-text-main: #000000;
-  --color-primary: #FFFF00;
+  --color-primary: #FFFFFF;
   --wrapper-height: 87vh;
   --image-max-width: 300px;
   --image-margin: 3rem;
