--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 /* Our default values set as CSS variables */
 :root {
   background-image: url("starry.jpg");
-  --color-bg: #FFFFFF;
-  --color-text-main: #000000;
-  --color-primary: #FFFFFF;
+  --color-bg: #000000;
+  --color-text-main: #FFFFFF;
+  --color-primary: #fcf003;
   --wrapper-height: 87vh;
   --image-max-width: 300px;
   --image-margin: 3rem;
