--- a/style.css
+++ b/style.css
@@ -265,3 +265,19 @@ h2 {
   background-color: #04AA6D;
   color: white;
 }
+
+/*-- Columns --*/
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
