--- a/style.css
+++ b/style.css
@@ -274,6 +274,12 @@ h2 {
   padding: 10px;
   
 }
+.columna {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  
+}
 
 /* Clear floats after the columns */
 .row:after {
