💺🌻 Checkpoint ./index.html:41223576/2268 ./style.css:41223576/12

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ h2 {
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #ffffff;
+  background-color: #000000;
   overflow: hidden;
   text-align: center;
 }
