--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ h2 {
   background-color: #000000;
   overflow: hidden;
   text-align: center;
+  height: 30px;
 }
 
 /* Style the links inside the navigation bar */
@@ -252,12 +253,13 @@ h2 {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-weight: bold;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
-  color: #ffdd1c;
+  color: yellow;
 }
 
 /* Add a color to the active/current link */
