--- a/style.css
+++ b/style.css
@@ -134,7 +134,14 @@ input {
 
 /* Subheading */
 h2 {
-  color: #2800FF;
+   color: #ffd700;
+  font-family: HK Grotesk;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 105%;
+  text-align: center;
+  margin: 0;
 }
 
 /* Interactive image */
