--- a/style.css
+++ b/style.css
@@ -143,7 +143,18 @@ h2 {
   text-align: center;
   margin: 0;
 }
-
+/* articles */
+h3{
+  color: #ffd700;
+  font-family: HK Grotesk;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 105%;
+  text-align: left;
+  margin: 0;
+  display: block;
+}
 /* Interactive image */
 .illustration:active {
   transform: translateY(5px);
